Avoid unnecessary copies
Signed-off-by: Sven Strickroth <email@cs-ware.de>